Base project improvement
